src/App.css
@import url("https://fonts.googleapis.com/css2?family=Archivo:wght@600&display=swap");

@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");

* {
  margin: 0;
  padding: 0;
  font-family: "Roboto", sans-serif;
}
.header-text,
.sub-title {
  font-family: "Archivo", sans-serif;
  font-weight: 600;
}

html {
  scroll-behavior: smooth;
}

body {
  background: #080808;
  color: #fff;
  overflow-x: hidden;
}

/* navbar */
.wrapper {
  position: relative;
  width: 100%;
  padding: 40px 150px;
}

.logo {
  font-size: 28px;
  width: auto;
  text-decoration: none;
}

.logo span {
  color: #ffffff; /* Warna pertama, contoh warna merah */
}

.logo::before {
  content: "Lotus ";
  color: #ffd300; /* Warna kedua, contoh warna hijau */
}

nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  position: absolute;
  width: 100%;
  z-index: 1;
  overflow-x: hidden;
}
.navbar-big {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 100%;
  z-index: 1;
  padding: 10px 0px;
}
nav ul li {
  display: inline-block;
  list-style: none;
  margin: 10px 20px;
}

nav ul li a {
  color: #fff;
  text-decoration: none;
  font-size: 18px;
  position: relative;
}

nav ul li a::after {
  content: "";
  width: 0;
  height: 0.9px;
  background: #ffd300;
  position: absolute;
  left: 0;
  bottom: -6px;
  transition: 0.8s;
}

nav ul li a:hover::after {
  width: 100%;
}
/* Styling for the sidebar menu */
#sidemenu {
  position: fixed;
  top: 0;
  right: -5000px; /* Initially hidden off-screen */
  width: 300px;
  height: 100%;
  background-color: #333; /* Background color for the sidebar */
  padding: 80px 20px 20px 20px;
  display: flex;
  flex-direction: column;
 
  align-items: center;
  transition: right 0.3s ease-in-out; /* Transition for smooth sliding effect */
  z-index: 1; /* Ensure the sidebar appears above other elements */
}

#sidemenu.active {
  right: 0; /* Slide in when the 'active' class is applied */
}

#sidemenu li {
  list-style: none;
  margin: 15px 0;
  text-align: center;
}

#sidemenu a {
  color: #fff; /* Link text color */
  text-decoration: none;
  font-size: 18px;
}

/* Close button */
#sidemenu .close-button {
  position: absolute;
  top: 20px;
  left: 20px;
  color: #fff;
  cursor: pointer;
  font-size: 24px;
  z-index: 2; /* Ensure the close button appears above the sidebar */
}

/* Styling for the burger icon */
.burger {
  cursor: pointer;
  display: none;
  z-index: 2; /* Ensure the burger icon appears above the sidebar */
}

/* Media query to show/hide the burger icon based on screen size */
@media only screen and (max-width: 800px) {
  .burger {
    display: block; /* Show the burger icon on small screens */
  }
}

/* besar logo berger */
.navbar-icon {
  font-size: 25px;
}

/* Hero */
.hero {
  background-image: url(/src/assets/Home-01.jpg);
  background-size: cover;
  background-position: center;
  height: 100vh;
  width: 100%;
  position: relative;
  overflow: hidden;
}

.hero .wrapper {
  height: 80%;
  justify-content: left;
  align-items: center;
  padding: 330px 150px;
  opacity: 1.0;
  background-color: rgba(0, 0, 0, 0.6);
}

.hero .wrapper div:nth-child(1) {
  color: white;
  font-size: 30px;
}

.hero .wrapper div h1 {
  color: white;
  font-size: 60px;
}
.hero .wrapper div h1 span {
  color: #ffd300;
  font-size: 60px;
}
/* about */

#about {
  padding: 150px 150px;
  color: #ababab;
}

.row {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.about-col-1 {
  flex-basis: 35%;
}

.about-col-1 img {
  width: 100%;
  border-radius: 15px;
}

.about-col-2 {
  flex-basis: 60%;
}

.sub-title {
  font-size: 30px;
  font-weight: 600;
  padding: 10px 0;
  color: #fff;
}

.tab-titles {
  display: flex;
  margin: 20px 0 40px;
}

.tab-links {
  margin-right: 50px;
  font-size: 18px;
  font-weight: 500;
  cursor: pointer;
  position: relative;
}

.tab-links::after {
  content: "";
  width: 0;
  height: 0.9px;
  background: #ffd300;
  position: absolute;
  left: 0;
  bottom: -6px;
  transition: 0.5s;
}

.tab-links.active-link::after {
  width: 50%;
}

.tab-contents ul li {
  list-style: none;
  margin: 10px 0;
}

.tab-contents ul li span {
  color: #ffd300;
  font-size: 14px;
}

.tab-contents {
  display: none;
}

.tab-contents.active-tab {
  display: block;
}

/* services */
.skills-list {
  display: grid;
  grid-template-columns: repeat(3, 0.2fr); /* Membuat 5 kolom */
  gap: 10px; /* Jarak antara elemen-elemen */
  list-style: none; /* Menghapus bullet list */
  padding: 0;
}

.skills-list li {
  margin: 0;
  padding: 10px;
  border-radius: 5px; /* Sudut elemen */
}

#services {
  padding: 100px 150px;
}

.services-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 40px;
  margin-top: 50px;
}

#services-detail {
  background: #262626;
  padding: 40px;
  font-size: 13px;
  font-weight: 300;
  border-radius: 8px;
  border: 2px solid #ffee32;
  transition: background 0.8s, transform 0.2s;
}

#services-detail:hover {
  background: #ffffff;
  transform: translateY(-3px);
  color: #000000;
}
#services-detail div i {
  font-size: 50px;
  margin-bottom: 30px;
}

.services-list div h2 {
  font-size: 20px;
  font-weight: 500;
  padding: 10px 0px;
}

.services-list div a {
  font-weight: bold;
  text-decoration: none;
  color: #ffd300;
  font-size: 12px;
  margin-top: 20px;
  display: inline-block;
}

/* portfolio */
#portfolio {
  padding: 100px 150px;
}
.Project-title {
  padding: 30px 0px 30px 0px;
  text-align: center;
}
.work-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 40px;
  margin-top: 50px;
}

.work {
  border-radius: 10px;
  position: relative;
  overflow: hidden;
}

.work img {
  width: 100%;
  height: 100%;
  border-radius: 10px;
  display: block;
  transition: transform 0.8s;
}

#wrapper-decs {
  padding: 0 10px;
}
/* ... */

